# fish-session

./: Cargo.toml  README.md
conf.d/: fish-session.fish
functions/: fish_session.fish
packaging/aur/: README.md
packaging/aur/fish-session/: .SRCINFO  PKGBUILD
packaging/aur/fish-session-git/: .SRCINFO  PKGBUILD
src/: client.rs  config.rs  daemon.rs  lib.rs  main.rs  protocol.rs  ui.rs
src/ui/: events.rs  render.rs
tests/: attach_flow.rs
