[package]
name = "fish-session"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
nix = { version = "0.29", features = ["term", "process", "fs", "signal", "poll"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

libc = "0.2"
vt100 = "0.15.2"
names = { version = "0.14", default-features = false }
